@@ -1,120 +1,137 @@
 package com.kustaurant.kustaurant.user.mypage.service;
 
-import com.kustaurant.kustaurant.common.util.TimeAgoUtil;
-import com.kustaurant.kustaurant.post.comment.domain.PostComment;
-import com.kustaurant.kustaurant.post.comment.service.port.PostCommentRepository;
-import com.kustaurant.kustaurant.evaluation.evaluation.domain.Evaluation;
-import com.kustaurant.kustaurant.evaluation.evaluation.service.port.EvaluationRepository;
-import com.kustaurant.kustaurant.post.post.domain.Post;
-import com.kustaurant.kustaurant.post.post.domain.PostScrap;
-import com.kustaurant.kustaurant.post.post.infrastructure.projection.PostDTOProjection;
-import com.kustaurant.kustaurant.post.post.service.port.PostQueryDAO;
-import com.kustaurant.kustaurant.post.post.service.port.PostRepository;
-import com.kustaurant.kustaurant.post.post.service.port.PostScrapRepository;
-import com.kustaurant.kustaurant.restaurant.favorite.service.RestaurantFavoriteRepository;
-import com.kustaurant.kustaurant.restaurant.favorite.model.RestaurantFavorite;
-import com.kustaurant.kustaurant.user.mypage.controller.port.MypageService;
-import com.kustaurant.kustaurant.user.mypage.controller.response.web.MypageDataView;
-import com.kustaurant.kustaurant.user.mypage.controller.response.web.PostCommentView;
-import com.kustaurant.kustaurant.user.mypage.controller.response.web.ScrappedPostView;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
+import com.kustaurant.kustaurant.global.exception.exception.user.NoProfileChangeException;
+import com.kustaurant.kustaurant.global.exception.exception.user.UserNotFoundException;
+import com.kustaurant.kustaurant.admin.notice.domain.NoticeDTO;
+import com.kustaurant.kustaurant.admin.notice.infrastructure.NoticeRepository;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
-/**
- * 웹 부분은 마이페이지가 모든 정보를 한번에 넘겨주도록 되어있음
- */
+import com.kustaurant.kustaurant.user.mypage.controller.port.MypageService;
+import com.kustaurant.kustaurant.user.mypage.controller.request.ProfileUpdateRequest;
+import com.kustaurant.kustaurant.user.mypage.controller.response.api.*;
+import com.kustaurant.kustaurant.user.mypage.controller.response.web.MypageDataView;
+import com.kustaurant.kustaurant.user.mypage.infrastructure.queryRepo.*;
+import com.kustaurant.kustaurant.user.user.domain.User;
+import com.kustaurant.kustaurant.user.user.domain.vo.Nickname;
+import com.kustaurant.kustaurant.user.user.domain.vo.PhoneNumber;
+import com.kustaurant.kustaurant.user.user.service.port.UserRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.time.format.DateTimeFormatter;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class MypageServiceImpl implements MypageService {
-    private final RestaurantFavoriteRepository restaurantFavoriteRepository;
-    private final EvaluationRepository evaluationRepository;
-    private final PostRepository postRepository;
-    private final PostCommentRepository postCommentRepository;
-    private final PostScrapRepository postScrapRepository;
-    private final PostQueryDAO postQueryDAO;
+    private final UserRepository userRepository;
+    private final UserProfileValidator validator;
+    private final NoticeRepository noticeRepo;
+    private final MyUserQueryRepository mypageQueryRepository;
+    private final MyRestaurantQueryRepository myRestaurantQueryRepository;
+    private final MyEvaluationQueryRepository myevaluationQueryRepository;
+    private final MyPostQueryRepository myPostQueryRepository;
 
-    public List<RestaurantFavorite> getRestaurantFavorites(Long userId) {
-        return restaurantFavoriteRepository.findSortedFavoritesByUserId(userId);
+    // 1. 마이페이지 화면에서 표시될 정보들 전체 반환.
+    public ProfileResponse getProfile(Long userId){
+        return mypageQueryRepository.getProfile(userId);
     }
 
-    public List<Evaluation> getEvaluations(Long userId) {
-        return new ArrayList<>(evaluationRepository.findSortedEvaluationByUserIdDesc(userId));
+    // 2. 마이페이지 프로필 정보(변경)화면에서 로직을 검증하고 업데이트 하거나 결과를 반환
+    @Transactional
+    public ProfileUpdateResponse updateUserProfile(Long userId, ProfileUpdateRequest req) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        boolean changed = false;
+        if(req.nickname()==null&&req.phoneNumber()==null){
+            throw new NoProfileChangeException();
+        }
+
+        if (req.nickname() != null) {
+            Nickname newNick = new Nickname(req.nickname());
+            validator.validateNicknameChange(user, newNick);  // 30일 룰 + 중복 체크
+            user.changeNickname(newNick);
+            changed = true;
+        }
+
+        if (req.phoneNumber() != null) {
+            PhoneNumber newPhone = new PhoneNumber(req.phoneNumber());
+            validator.validatePhoneNumberChange(newPhone); // 중복 체크
+            user.changePhoneNumber(newPhone);
+            changed = true;
+        }
+
+        if (!changed) {
+            throw new NoProfileChangeException();
+        }
+
+        return new ProfileUpdateResponse(
+                user.getNickname().getValue(),
+                user.getEmail() != null ? user.getEmail() : null,
+                user.getPhoneNumber() != null ? user.getPhoneNumber().getValue() : null
+        );
     }
 
-    public List<Post> getActivePosts(Long userId) {
-        return postRepository.findActiveByUserId(userId);
+
+    // 3. 유저가 즐겨찾기한 레스토랑 리스트들 반환 (추가한 순서)
+    public List<MyRestaurantResponse> getUserFavoriteRestaurantList(Long userId) {
+
+        return myRestaurantQueryRepository.findMyFavoritesRestaurants(userId);
     }
 
 
-    public List<PostComment> getActivePostComments(Long userId) {
-        return postCommentRepository.findActiveByUserId(userId);
+    // 4. 유저가 평가한 레스토랑 리스트들 반환 (평가한 날짜 순서)
+    public List<MyRatedRestaurantResponse> getUserEvaluateRestaurantList(Long userId) {
+
+        return myevaluationQueryRepository.findByUserId(userId);
     }
 
-    public List<PostScrap> getPostScraps(Long userId) {
-        return postScrapRepository.findByUserId(userId);
+
+    // 5. 마이페이지 - 내가 작성한 게시글 목록 조회
+    public List<MyPostsResponse> getUserPosts(Long userId) {
+
+        return myPostQueryRepository.findMyPostsByUserId(userId);
     }
 
-    private List<PostCommentView> convertCommentsToDTOs(List<PostComment> postComments) {
-        List<Integer> postIds = postComments.stream()
-                .map(PostComment::getPostId)
-                .distinct()
-                .toList();
+    // 6. 내가 스크랩한 게시글 목록 조회
+    public List<MyPostsResponse> getScrappedUserPosts(Long userId) {
 
-        Map<Integer, String> postIdToTitle = postRepository.findAllById(postIds).stream()
-                .collect(Collectors.toMap(
-                        Post::getId,
-                        Post::getTitle
-                ));
+        return myPostQueryRepository.findMyScrappedPostsByUserId(userId);
+    }
 
-        return postComments.stream()
-                .map(comment -> new PostCommentView(
-                        comment.getId(),
-                        comment.getCommentBody(),
-                        0,
-                        comment.calculateTimeAgo(),
-                        postIdToTitle.getOrDefault(comment.getPostId(), "알 수 없음"),
-                        comment.getPostId()
+    // 7. 마이페이지 - 내가 작성한 게시글 댓글 목록 조회
+    public List<MyPostCommentResponse> getCommentedUserPosts(Long userId) {
+
+        return myPostQueryRepository.findMyPostCommentsByUserId(userId);
+    }
+
+
+    // 8. 모든 공지사항 목록 반환
+    public List<NoticeDTO> getAllNotices() {
+        return noticeRepo.findAll().stream()
+                .map(notice -> new NoticeDTO(
+                        notice.getTitle(),
+                        notice.getHref(),
+                        notice.getCreatedAt().format(DateTimeFormatter.ofPattern("yyyy-MM-dd"))
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private List<ScrappedPostView> getScrapViews(Long userId) {
-        return postQueryDAO.findMyScrappedPosts(userId)
-                .stream()
-                .map(this::toScrapView)
-                .toList();
-    }
-
-    private ScrappedPostView toScrapView(PostDTOProjection p) {
-        return ScrappedPostView.builder()
-                .postId(p.postId())
-                .title(p.postTitle())
-                .category(p.postCategory())
-                .likeCount(p.getNetLikes())
-                .timeAgo(TimeAgoUtil.toKor(
-                        p.updatedAt() != null ? p.updatedAt()
-                                : p.createdAt()))
-                .build();
-    }
-
-    @Override
-    public MypageDataView getMypageData(Long userId) {
-        List<PostComment> comments = getActivePostComments(userId);
-        List<PostCommentView> postCommentDTO = convertCommentsToDTOs(comments);
-        List<ScrappedPostView> postScrapDTO = getScrapViews(userId);
+    public MypageDataView getMypageWebData(Long userId) {
+        List<MyRestaurantResponse> myFavoriterestaurants = this.getUserFavoriteRestaurantList(userId);
+        List<MyRatedRestaurantResponse> myRatedRestaurants = this.getUserEvaluateRestaurantList(userId);
+        List<MyPostsResponse> myPosts = this.getUserPosts(userId);
+        List<MyPostCommentResponse> myPostComments = this.getCommentedUserPosts(userId);
+        List<MyPostsResponse> myPostScraps = this.getScrappedUserPosts(userId);
 
         return MypageDataView.builder()
-                .restaurantFavoriteList(getRestaurantFavorites(userId))
-                .restaurantEvaluationList(getEvaluations(userId))
-                .postList(getActivePosts(userId))
-                .postCommentList(postCommentDTO)
-                .postScrapList(postScrapDTO)
+                .restaurantFavoriteList(myFavoriterestaurants)
+                .restaurantEvaluationList(myRatedRestaurants)
+                .postList(myPosts)
+                .postCommentList(myPostComments)
+                .postScrapList(myPostScraps)
                 .build();
     }
 }
